Add index action for search
